# monero-multisig-gui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  create_ico.sh  monero-multisig.desktop
.github/workflows/: build-macos.yml
docs/: index.html
qml/: LeftPanel.qml  LockController.qml  Main.qml  MiddlePanel.qml
qml/pages/: AccountDataPage.qml  AccountPage.qml  AddWalletPage.qml  AddressQrPage.qml  ArchivedWalletsPage.qml  IncomingTransfer.qml  MultisigImportPage.qml  MultisigLandingPage.qml  NewMultisig.qml  NewStandardWallet.qml  NewTransferSetup.qml  NotifierSetup.qml  NotifierStatus.qml  OutgoingTransfer.qml  SavedTransfer.qml  SessionsOverview.qml  SimpleTransferApproval.qml  SimpleTransferSetup.qml  TorPage.qml  TransferTracker.qml  UnifiedAddressBook.qml  WalletDetails.qml  WalletReceivePage.qml  WalletTransfersPage.qml  Wallets.qml
qml/pages/components/: AppAddressBookDialog.qml  AppAlert.qml  AppBackButton.qml  AppButton.qml  AppCard.qml  AppCheckBox.qml  AppConfirmDialog.qml  AppCopyButton.qml  AppDotIndicator.qml  AppFormDialog.qml  AppIcon.qml  AppIconButton.qml  AppInput.qml  AppInputDialog.qml  AppListDialog.qml  AppNavButton.qml  AppNavButtonDot.qml  AppSection.qml  AppStatusIndicator.qml  AppSwitch.qml  ColorOverlay.qml  DaemonAddressBookTab.qml  ExpandableNavButton.qml  LoginScreen.qml  PeerAddressBookTab.qml  QRCode.qml  TrustedPeersTab.qml  XMRAddressBookTab.qml
scripts/: bundle-windows.sh
security/: RELEASE-KEY.asc
src/cpp/: accountmanager.cpp  bootstrap.cpp  cryptoutils.cpp  cryptoutils_extras.cpp  httptask.cpp  incomingtransfer.cpp  main.cpp  multisigapirouter.cpp  multisigimportsession.cpp  multisigmanager.cpp  multisignotifier.cpp  multisigsession.cpp  multiwallercontroller.cpp  routerhandler.cpp  simpletransfer.cpp  thememanager.cpp  torbackend.cpp  torinstaller.cpp  transferinitiator.cpp  transfermanager.cpp  transfertracker.cpp  wallet.cpp
src/h/: accountmanager.h  bootstrap.h  cryptoutils.h  cryptoutils_extras.h  httptask.h  incomingtransfer.h  multisigapirouter.h  multisigimportsession.h  multisigmanager.h  multisignotifier.h  multisigsession.h  multiwalletcontroller.h  restore_height.h  routerhandler.h  simpletransfer.h  thememanager.h  torbackend.h  torinstaller.h  torinstallworker.h  transferinitiator.h  transfermanager.h  transfertracker.h  wallet.h  win_compat.h
